Gnumeric 1.1.12

Andreas
	* Hide hidden cells in groff/troff export
Jody
	* POISSON is defined for x == 0
	* Start work on rotated text

Morten:
	* Spelling fixes all over.
	* Add the ability to search expression results.
	* Add parameter checks to RAYLEIGH, RAYLEIGHTAIL, EXPPOWDIST,
	  LAPLACE, PARETO, LOGISTIC functions.

J.H.M. Dassen (Ray):
	* Updates to the build system.
	* Some code janitor work.

--------------------------------------------------------------------------
Gnumeric 1.1.11

Adrian:
	* Some LaTeX exporter fixes

Andreas:
	* Fix 97246

Dustin Mudryk:
	* Hide hidden cells in LaTeX export

Jody:
	* Store current sheet in both spots for xls export
	* Fix multiple name invalidation within 1 expr on sheet delete
	* Work around incorrect XL95 export in OpenCalc
	* Enable full simplistic just in time render & span.
	* Fix names.
	* Tidy and brighten up the name dialog.
	* Add more format and alignment support to cell edit.
	* Re-enable feedback for autocomplete.
	* Fix xls names with unicode ids.
	* Fix xls 2000 import for external names.
	* Fix edit line behaviour.

Morten:
	* Clean up SERIESSUM.
	* Fix crash during xml save.
	* Fix elusive dependency leak.
	* Implemented a new and better qgamma function.  (Anything dealing
          with the chisq distribution will also benefit from this.)
	* More utf8 work.
	* Fix ABW in html exporter.

--------------------------------------------------------------------------
Gnumeric 1.1.10

Andreas:
	* Add XHTML exporter
	* Fix minor bug in the sort dialog
	* Fix leak
	* Fix 95333

Chris Benedict:
	* Do not allow all sheets in a workbook to be deleted.
	* Implement a simple configuration dialog for the frame
	  sheet object

dorami@bu.iij4u.or.jp:
	* Add InputMethod support for better international key support

Hal Ashburner:
	* Rework derivative valuation routines

Jody:
	* Decrease GAL dependence.
	* More work on opencalc importer.
	* Start clean up of error handling routines.
	* Some UTF-8 cleanup.