@@ -2,6 +2,7 @@ Gnumeric 1.1.12
 
 Andreas
 	* Hide hidden cells in groff/troff export
+
 Jody
 	* POISSON is defined for x == 0
 	* Start work on rotated text
@@ -11,6 +12,7 @@ Morten:
 	* Add the ability to search expression results.
 	* Add parameter checks to RAYLEIGH, RAYLEIGHTAIL, EXPPOWDIST,
 	  LAPLACE, PARETO, LOGISTIC functions.
+	* Plug leaks in function selector dialog.
 
 J.H.M. Dassen (Ray):
 	* Updates to the build system.
